TicTacToe under SocketIO folder

--- a/SocketIO/TicTacToe/index.html
+++ b/SocketIO/TicTacToe/index.html
@@ -17,7 +17,7 @@
     <div class="page">
         <header>
             <div id="title">
-                <h1>Social Games - TicTacToe</h1>
+                <h1>TicTacToe</h1>
             </div>
             <div id="logindisplay">
                 <br />
