--- a/SocketIO/TicTacToe/index.html
+++ b/SocketIO/TicTacToe/index.html
@@ -28,7 +28,7 @@
         </header>
         <section id="main">
             
-        <script src="Scripts/socket.io.js" type="text/javascript"></script>
+        <script src="http://localhost:8080/socket.io/socket.io.js" type="text/javascript"></script>
         <script src="Scripts/game/TicTacToeBoard.js" type="text/javascript"></script>
         <script src="Scripts/game/TicTacToeGame.js" type="text/javascript"></script>
         <script src="Scripts/game/TicTacToeViewModel.js" type="text/javascript"></script>
